bug/19230 - featured content spacing

--- a/sites/all/themes/ewo/assets/_scss/page/_front.scss
+++ b/sites/all/themes/ewo/assets/_scss/page/_front.scss
@@ -177,6 +177,7 @@
 	@include desk {
 		@include omega;
 		float: left;
+		margin-top: 30px;
 	}
 
 	.views-field-field-banner-image {
